# quantiq

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
extractor-api/: Makefile  README.md  pyproject.toml
extractor-api/quantiq/core/domain/: base.py
extractor-api/quantiq/core/infra/databases/: tables.py
extractor-api/quantiq/core/logging/: base_logger.py
extractor-api/quantiq/core/utils/: project_root.py
extractor-api/quantiq/modules/assets/domains/: asset_details.py  assets.py
extractor-api/quantiq/modules/assets/manager/: asset_manager.py
extractor-api/quantiq/modules/assets/repositories/: asset_details_repository.py
extractor-api/quantiq/modules/scrapper/providers/fundamentus/data/: __init__.py
extractor-api/quantiq/modules/scrapper/providers/fundamentus/extractor/: __init__.py
extractor-api/quantiq/modules/scrapper/strategies/: extractor.py
extractor-api/tests/faker/: scrapper.py
extractor-api/tests/quantiq/modules/assets/repositories/: test_asset_details_repository.py  test_asset_repository.py
quantiq/: main.py  scraper.py
quantiq/core/domain/: base.py
quantiq/core/errors/: __init__.py
quantiq/core/infra/databases/: tables.py
quantiq/core/infra/databases/sqlite/: sqlite.py
quantiq/core/repositories/: repo.py
quantiq/core/utils/: project_root.py
quantiq/database/: database.py
quantiq/modules/assets/controllers/: asset_controllers.py
quantiq/modules/assets/domains/: assets.py
quantiq/modules/assets/errors/: __init__.py
quantiq/modules/assets/manager/: asset_manager.py
quantiq/modules/assets/repositories/: asset_details_repository.py  asset_repository.py
quantiq/modules/assets/services/: asset_details_service.py  asset_service.py
quantiq/modules/balance_sheet/dependencies/: __init__.py
quantiq/modules/balance_sheet/domains/: entities.py
quantiq/modules/balance_sheet/repositories/: balance_sheets_repository.py
quantiq/modules/balance_sheet/services/: service.py
quantiq/modules/financial_info/dependencies/: __init__.py
quantiq/modules/financial_info/domain/: entities.py
quantiq/modules/financial_info/repository/: financial_info_repository.py
quantiq/modules/financial_info/services/: service.py
quantiq/modules/financial_results/dependencies/: __init__.py
quantiq/modules/financial_results/domains/: entities.py
quantiq/modules/financial_results/repositories/: financial_results.py  financial_results_repository.py
quantiq/modules/financial_results/services/: financial_results.py  services.py
quantiq/modules/indicators/dependencies/: __init__.py
quantiq/modules/indicators/domains/: entities.py
quantiq/modules/indicators/repositories/: indicator_repository.py  indicators.py
quantiq/modules/indicators/services/: indicators.py  service.py
quantiq/modules/market_values/dependencies/: __init__.py
quantiq/modules/market_values/domains/: entities.py
quantiq/modules/market_values/repositories/: market_values.py  market_values_repository.py
quantiq/modules/market_values/services/: market_values.py  service.py
quantiq/modules/scrapper/dependencies/: __init__.py
quantiq/modules/scrapper/extractors/: extractor.py
quantiq/modules/scrapper/providers/: scrapper.py
quantiq/modules/scrapper/providers/fundamentus/: reit_extractor.py  stock_extractor.py
quantiq/modules/scrapper/providers/fundamentus/data/: __init__.py
quantiq/modules/scrapper/providers/fundamentus/extractor/: reit_extractor.py  stock_extractor.py
quantiq/modules/scrapper/strategies/: extractor.py
quantiq/modules/stocks/dependencies/: __init__.py
quantiq/modules/stocks/domain/: entities.py
quantiq/modules/stocks/errors/: __init__.py
quantiq/modules/stocks/presentation/api/: stock_router.py
quantiq/modules/stocks/repositories/: stock_repository.py
quantiq/modules/stocks/services/: stock_services.py
quantiq/modules/stocks/use_cases/: get_stock.py  insert_stock.py
quantiq/modules/variations/dependencies/: __init__.py
quantiq/modules/variations/domains/: entities.py
quantiq/modules/variations/repositories/: variations.py  variations_repository.py
quantiq/modules/variations/services/: service.py  variations.py
quantiq/repositories/: balance_sheets_repository.py  financial_info_repository.py  financial_results_repository.py  indicator_repository.py  market_values_repository.py  stock_repository.py  variations_repository.py
tests/faker/: quantiq.py  scrapper.py
tests/quantiq/modules/assets/: test_assets.py
tests/quantiq/modules/assets/domains/: test_assets.py
tests/quantiq/modules/assets/repositories/: test_asset_repository.py
tests/quantiq/modules/assets/services/: test_assert_details_service.py  test_asset_service.py
tests/quantiq/modules/variations/domain/: test_variations.py
